# tastproject

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
testproject/common/: choises.py  models.py
testproject/config/: settings.py  urls.py
testproject/links/: dependencies.py  models.py  schemas.py
testproject/links/api/: serializers.py  urls.py  views.py
testproject/links/migrations/: 0001_initial.py  0002_alter_link_image.py  0003_link_user.py  0004_collection_linkcollection.py  0005_collection_user.py  0006_alter_link_title.py  0007_alter_link_description.py
testproject/registration/: dependencies.py  exceptions.py  schemas.py
testproject/registration/api/: serializers.py  urls.py  views.py
testproject/users/: database.py  models.py
testproject/users/api/: serializers.py
testproject/users/migrations/: 0001_initial.py  0002_user_link.py  0003_alter_user_link.py  0004_remove_user_link.py
